src/app/shared/components/paragraph/paragraph.component.scss
@import "theme";
.paragraph {
  line-height: 150%;
  margin: 0px;
  color: $color-neutral-dark;
  align-items: center;
  gap: 4px;
}

.display-flex {
  display: flex;
}

.white-color {
  color: $color-white !important;
}

.error-color {
  color: $color-negative !important;
}

.primary-dark-color {
  color: $color-primary-dark;
}

.neutral-color {
  color: $color-neutral-dark;
}

.strikeThrough {
  text-decoration: line-through;
}

.dimmed {
  color: $color-neutral-80;
  text-decoration-color: $color-neutral-80;
}

.paragraph-x-large {
  font-size: 24px;
}

.paragraph-large {
  font-size: 18px;
}

.paragraph-medium {
  font-size: 16px;
}

.paragraph-small {
  font-size: 14px;
}

.paragraph-x-small {
  font-size: 12px;
}

/* show an ellipsis (...) when content overflow */
.might-overflow {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
/* expand content to its full length on mouseover */
.might-overflow:hover {
  text-overflow: clip;
  word-break: break-all;
  white-space: normal;
}

.wrap-on-overflow {
  overflow: hidden;
  text-overflow: clip;
  white-space: normal;
  word-wrap: break-word;
}

.bold-font {
  font-weight: bold;
}

p app-help-icon {
  margin-left: 8px;
}

